--- a/charts/all/dataprep/templates/dataprep-buildconfig.yaml
+++ b/charts/all/dataprep/templates/dataprep-buildconfig.yaml
@@ -22,7 +22,8 @@ spec:
   strategy:
     type: Docker
     dockerStrategy:
-      dockerfilePath: comps/dataprep/redis/langchain/docker/Dockerfile
+      {% comment %} dockerfilePath: comps/dataprep/redis/langchain/docker/Dockerfile {% endcomment %}
+      dockerfilePath: comps/dataprep/src/Dockerfile
       {{- if .Values.global.gaudillm.build_envs }}
       env:
       {{- range .Values.global.gaudillm.build_envs }}
