--- a/charts/all/embedding/templates/embedding-deployment.yaml
+++ b/charts/all/embedding/templates/embedding-deployment.yaml
@@ -30,7 +30,7 @@ spec:
             - name: HOME
               value: /tmp/temp-data
             - name: PYTHONPATH
-              value: /home/user/.local/lib/python3.11/site-packages:/home/user
+              value: /home/user/.local/lib/python3.11/site-packages:/home # ref: https://github.com/opea-project/GenAIComps/blob/1064b2b689b5e5b1b2065a9642ba950559c3fb48/comps/embeddings/src/Dockerfile#L11
             - name: TEI_EMBEDDING_ENDPOINT
               value: http://tei-embedding-service.gaudi-llm.svc.cluster.local:8090
             {{- if .Values.global.gaudillm.runtime_envs }}
