fixed yaml problems, update rest of the services to latest gitref

--- a/charts/all/chatqna-gaudi-backend/templates/chatqna-gaudi-backend-server-buildconfig.yaml
+++ b/charts/all/chatqna-gaudi-backend/templates/chatqna-gaudi-backend-server-buildconfig.yaml
@@ -17,7 +17,6 @@ spec:
   resources: {}
   runPolicy: SerialLatestOnly
   source:
-    contextDir: ChatQnA/docker
     git:
       ref: {{ .Values.global.gaudillm.chatqna_gaudi_backend.git_ref }}
       uri: https://github.com/opea-project/GenAIExamples.git
@@ -25,7 +24,7 @@ spec:
   strategy:
     type: Docker
     dockerStrategy:
-      dockerfilePath: Dockerfile
+      dockerfilePath: ChatQnA/Dockerfile
       {{- if .Values.global.gaudillm.build_envs }}
       env:
       {{- range .Values.global.gaudillm.build_envs }}
