--- a/charts/all/chatqna-ui-server/templates/chatqna-gaudi-ui-server-buildconfig.yaml
+++ b/charts/all/chatqna-ui-server/templates/chatqna-gaudi-ui-server-buildconfig.yaml
@@ -15,7 +15,6 @@ spec:
   resources: {}
   runPolicy: SerialLatestOnly
   source:
-    contextDir: ChatQnA/docker/ui
     git:
       ref: {{ .Values.global.gaudillm.chatqna_ui_server.git_ref }}
       uri: https://github.com/opea-project/GenAIExamples.git
@@ -23,7 +22,7 @@ spec:
   strategy:
     type: Docker
     dockerStrategy:
-      dockerfilePath: docker/Dockerfile
+      dockerfilePath: ChatQnA/ui/docker/Dockerfile
       {{- if .Values.global.gaudillm.build_envs }}
       env:
       {{- range .Values.global.gaudillm.build_envs }}
