--- a/charts/all/chatqna-gaudi-backend/templates/chatqna-gaudi-backend-server-buildconfig.yaml
+++ b/charts/all/chatqna-gaudi-backend/templates/chatqna-gaudi-backend-server-buildconfig.yaml
@@ -17,6 +17,7 @@ spec:
   resources: {}
   runPolicy: SerialLatestOnly
   source:
+    contextDir: ChatQnA
     git:
       ref: {{ .Values.global.gaudillm.chatqna_gaudi_backend.git_ref }}
       uri: https://github.com/opea-project/GenAIExamples.git
@@ -24,7 +25,7 @@ spec:
   strategy:
     type: Docker
     dockerStrategy:
-      dockerfilePath: ChatQnA/Dockerfile
+      dockerfilePath: Dockerfile
       {{- if .Values.global.gaudillm.build_envs }}
       env:
       {{- range .Values.global.gaudillm.build_envs }}
