--- a/charts/all/retriever/templates/retriever-buildconfig.yaml
+++ b/charts/all/retriever/templates/retriever-buildconfig.yaml
@@ -22,7 +22,7 @@ spec:
   strategy:
     type: Docker
     dockerStrategy:
-      dockerfilePath: comps/rerankings/src
+      dockerfilePath: comps/retrievers/src/Dockerfile
       {{- if .Values.global.gaudillm.build_envs }}
       env:
       {{- range .Values.global.gaudillm.build_envs }}
