--- a/charts/all/dataprep/templates/dataprep-deployment.yaml
+++ b/charts/all/dataprep/templates/dataprep-deployment.yaml
@@ -35,6 +35,8 @@ spec:
               value: redis://redis-vector-db.gaudi-llm.svc.cluster.local:6379
             - name: INDEX_NAME
               value: rag-redis
+            - name: NLTK_DATA
+              value: /tmp/temp-data/nltk_data
             {{- if .Values.global.gaudillm.runtime_envs }}
             {{- range .Values.global.gaudillm.runtime_envs }}
             - name: {{ .name }}
