--- a/charts/all/retriever/templates/retriever-deployment.yaml
+++ b/charts/all/retriever/templates/retriever-deployment.yaml
@@ -34,6 +34,8 @@ spec:
               value: rag-redis
             - name: REDIS_URL
               value: redis://redis-vector-db.gaudi-llm.svc.cluster.local:6379
+            - name: NLTK_DATA
+              value: /tmp/temp-data/nltk_data
             {{- if .Values.global.gaudillm.runtime_envs }}
             {{- range .Values.global.gaudillm.runtime_envs }}
             - name: {{ .name }}
@@ -45,7 +47,6 @@ spec:
           ports:
             - containerPort: 7000
               protocol: TCP
-          workingDir: /home/user/comps/retrievers/langchain
           volumeMounts:
             - name: temp-data
               mountPath: /tmp/temp-data
