--- a/charts/all/llm-server-for-gaudi/templates/llm-deployment.yaml
+++ b/charts/all/llm-server-for-gaudi/templates/llm-deployment.yaml
@@ -32,7 +32,7 @@ spec:
           - |
             cp /usr/lib/ssl/cert.pem /tmp/bundle.crt && \
             cat /rhoai-ca/tls.crt  | tee -a '/tmp/bundle.crt' && \
-            python llm.py
+            python opea_llm_microservice.py
           env:
             - name: HOME
               value: /tmp/temp-data
