--- a/charts/all/chatqna-ui-server/templates/chatqna-gaudi-ui-server-deployment.yaml
+++ b/charts/all/chatqna-ui-server/templates/chatqna-gaudi-ui-server-deployment.yaml
@@ -44,7 +44,7 @@ spec:
             - name: CHAT_BASE_URL
               value: http://megaservice-{{ .Values.global.gaudillm.namespace }}.apps.{{ .Values.global.clusterDomain }}/v1/chatqna
             - name: UPLOAD_FILE_BASE_URL
-              value: http://megaservice-{{ .Values.global.gaudillm.namespace }}.apps.{{ .Values.global.clusterDomain }}/v1/dataprep
+              value: http://megaservice-{{ .Values.global.gaudillm.namespace }}.apps.{{ .Values.global.clusterDomain }}/v1/dataprep/ingest
             {{- if .Values.global.gaudillm.runtime_envs }}
             {{- range .Values.global.gaudillm.runtime_envs }}
             - name: {{ .name }}
